--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 
-	"homepage": "https://beibeizheng.github.io/portfolio",
+	"homepage": "https://beibeizheng.github.io/portfolio/",
 
 	"name": "reactfolio",
 
